# m3uToCrate

./: .gitignore  README.md  m3u-to-crates.spec  pyproject.toml
src/m3u_to_crates/: __init__.py  cli.py
tests/: test_cli.py
